Unificación de CSS´s

--- a/partida.html
+++ b/partida.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Partida de Ajedrez</title>
-  <link rel="stylesheet" href="styles-partida.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -46,7 +46,7 @@
           <ul>
             <li>e2 a e4</li>
           </ul>
-        </section>
+        </section> 
 
         <section class="invitar">
           <h3>Invitar jugador</h3>
