--- a/pp.html
+++ b/pp.html
@@ -5,19 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
         <title>Pagina principal</title>
-        <link rel="stylesheet" href="styles-pp.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body> 
         <input type="radio" name="vista" id="inicio" checked>
         <input type="radio" name="vista" id="nueva-partida">
         <input type="radio" name="vista" id="en-curso">
         <input type="radio" name="vista" id="partidas-publicas">
         <input type="radio" name="vista" id="historial">
         <input type="radio" name="vista" id="estadisticas">
-        <div class="titulo">
+        <div class="titulo_pp">
             <h1>Inicio</h1>  
         </div>
-        <div class="contenedor categorias"> 
+        <div class="contenedor_pp categorias"> 
             <label for="nueva-partida" class="boton">
                 <span class="box-container"> <!-- Contenedor adicional -->
                     <span class="box">
@@ -65,13 +65,13 @@
                 </a>  
             </label>
         </div> 
-        <div class="contenedor detalle partida">
+        <div class="contenedor_pp detalle partida">
             <label class="boton volver" for="inicio">⬅ Volver</label>
             <h1>Nueva partida</h1>
             <img src="/images/peon.png" class="itemdetalle" alt="Iniciar">
             <a href="partida.html" class="iniciar">Iniciar</a>
         </div>
-        <div class="contenedor detalle curso">
+        <div class="contenedor_pp detalle curso">
             <label class="boton volver" for="inicio">⬅ Volver</label>
             <h1>Partidas en curso</h1>
             <div class="table-container">
@@ -113,35 +113,35 @@
                 </table>
             </div>
         </div>
-        <div class="contenedor detalle publica">
+        <div class="contenedor_pp detalle publica">
             <label class="boton volver" for="inicio">⬅ Volver</label>
             <h1>Partidas disponibles</h1>
             <div class="partidas">
                 <div class="carrousel">
-                    <article class="card">
+                    <article class="card_pp">
                         <h2>Pepito</h2>
                         <button> Jugar</button>
                     </article>
-                    <article class="card">
+                    <article class="card_pp">
                         <h2>Juana</h2>
                         <button> Jugar</button>
                     </article>
-                    <article class="card">
+                    <article class="card_pp">
                         <h2>Andrés</h2>
                         <button> Jugar</button>
                     </article>
-                    <article class="card">
+                    <article class="card_pp">
                         <h2>Ronaldo</h2>
                         <button> Jugar</button>
                     </article>
-                    <article class="card">
+                    <article class="card_pp">
                         <h2>Diego</h2>
                         <button> Jugar</button>
                     </article>
                 </div>
             </div>
         </div>
-        <div class="contenedor detalle historial">
+        <div class="contenedor_pp detalle historial">
             <label class="boton volver" for="inicio">⬅ Volver</label>
             <h1>Historial</h1>
             <div class="table-container">
@@ -183,7 +183,7 @@
                 </table>
             </div>
         </div>
-        <div class="contenedor detalle estadisticas">
+        <div class="contenedor_pp detalle estadisticas">
             <label class="boton volver" for="inicio">⬅ Volver</label>
             <h1>Estadísticas</h1>
             <div class="contenedor-estadisticas">
