--- a/Desarrolladores.html
+++ b/Desarrolladores.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quiénes somos?</title>
-    <link rel="stylesheet" href="quienes_somos.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -38,5 +38,5 @@
             </div>
         </div>
     </div>
-</body>
+</body> 
 </html>
